[gd_scene load_steps=4 format=3 uid="uid://b0wmg3bm6lht7"]

[ext_resource type="Script" uid="uid://d362g8dqm3op5" path="res://addons/oip_comms/controls/tag_group.gd" id="1_ugh8j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwife"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 3

[sub_resource type="Theme" id="Theme_ugh8j"]
Panel/styles/panel = SubResource("StyleBoxFlat_wwife")

[node name="TagGroup" type="Control"]
custom_minimum_size = Vector2(860, 73)
layout_mode = 3
anchors_preset = 0
offset_right = 860.0
offset_bottom = 73.0
script = ExtResource("1_ugh8j")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ugh8j")

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 7.0
offset_right = 44.0
offset_bottom = 24.0
text = "Name"

[node name="Name" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 76.0
offset_top = 4.0
offset_right = 326.0
offset_bottom = 29.0
select_all_on_focus = true

[node name="PollingRateLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 348.0
offset_top = 7.0
offset_right = 445.0
offset_bottom = 24.0
text = "Polling Rate (ms)"

[node name="PollingRate" type="SpinBox" parent="Panel"]
layout_mode = 0
offset_left = 452.0
offset_top = 4.0
offset_right = 547.0
offset_bottom = 29.0
max_value = 1e+06
rounded = true

[node name="ProtocolLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 564.0
offset_top = 7.0
offset_right = 619.0
offset_bottom = 24.0
text = "Protocol"

[node name="Protocol" type="OptionButton" parent="Panel"]
layout_mode = 0
offset_left = 628.0
offset_top = 4.0
offset_right = 755.0
offset_bottom = 29.0
selected = 0
item_count = 3
popup/item_0/text = "ab_eip"
popup/item_0/id = 0
popup/item_1/text = "modbus_tcp"
popup/item_1/id = 1
popup/item_2/text = "opc_ua"
popup/item_2/id = 2

[node name="GatewayLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 39.0
offset_right = 55.0
offset_bottom = 56.0
text = "Gateway"

[node name="Gateway" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 76.0
offset_top = 36.0
offset_right = 326.0
offset_bottom = 61.0
select_all_on_focus = true

[node name="PathLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 348.0
offset_top = 39.0
offset_right = 445.0
offset_bottom = 56.0
text = "Path"

[node name="Path" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 452.0
offset_top = 36.0
offset_right = 547.0
offset_bottom = 61.0
select_all_on_focus = true

[node name="CPULabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 564.0
offset_top = 39.0
offset_right = 619.0
offset_bottom = 56.0
text = "CPU"

[node name="CPU" type="OptionButton" parent="Panel"]
layout_mode = 0
offset_left = 628.0
offset_top = 36.0
offset_right = 755.0
offset_bottom = 61.0
selected = 0
item_count = 7
popup/item_0/text = "ControlLogix"
popup/item_0/id = 0
popup/item_1/text = "PLC5"
popup/item_1/id = 1
popup/item_2/text = "SLC500"
popup/item_2/id = 2
popup/item_3/text = "LogixPccc"
popup/item_3/id = 3
popup/item_4/text = "Micro800"
popup/item_4/id = 4
popup/item_5/text = "MicroLogix"
popup/item_5/id = 5
popup/item_6/text = "Omron"
popup/item_6/id = 6

[node name="Delete" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 778.0
offset_top = 21.0
offset_right = 824.0
offset_bottom = 46.0
text = "Delete"

[connection signal="text_changed" from="Panel/Name" to="." method="_on_text_changed"]
[connection signal="value_changed" from="Panel/PollingRate" to="." method="_on_value_changed"]
[connection signal="item_selected" from="Panel/Protocol" to="." method="_on_item_selected"]
[connection signal="text_changed" from="Panel/Gateway" to="." method="_on_Gateway_text_changed"]
[connection signal="text_changed" from="Panel/Path" to="." method="_on_Path_text_changed"]
[connection signal="item_selected" from="Panel/CPU" to="." method="_on_item_selected"]
[connection signal="pressed" from="Panel/Delete" to="." method="_on_Delete_pressed"]
